# gp-market-trading

./: .cvsignore  .hgignore  Abs.cpp  Abs.hpp  Avg.cpp  Avg.hpp  CMakeLists.txt  ConstantDouble.cpp  ConstantDouble.hpp  Context.cpp  Context.hpp  EMA.cpp  EMA.hpp  EphemeralDay.cpp  EphemeralDay.hpp  Eq.cpp  Eq.hpp  Fitness.cpp  Fitness.hpp  GreaterThan.cpp  GreaterThan.hpp  IfThenElse.cpp  IfThenElse.hpp  LICENSE  LessThan.cpp  LessThan.hpp  MACD.cpp  MACD.hpp  Makefile  Max.cpp  Max.hpp  Min.cpp  Min.hpp  PPO.cpp  PPO.hpp  Primitives.cpp  Primitives.hpp  README  ROC.cpp  ROC.hpp  (+24 more)
cmake/Modules/: FindOpenBeagle.cmake  FindPACC.cmake
imp/: .cvsignore  .hgignore  available_dbd.pl  create_zse.sql  imp.pl  import-from-belex.rb  import-from-ljse.rb  import-from-yahoo.rb  import-from-zse.rb  normalize.pl  promet.pl  seminar.sh
imp/data/: atls-r-a.txt  crobex.txt  cros-r-a.txt  dlkv-r-a.txt  indg-r-a.txt  jnaf-r-a.txt  pbz-r-a.txt  podr-r-a.txt  zaba-r-a.txt  zlar-r-a.txt  zlto-r-a.txt  zse-promet.txt
plot/: .cvsignore  .hgignore  Makefile  plot.cpp
results/: beagle_process.sh  draw.gnuplot
run/: create_tests.sh
stats/: .hgignore  Makefile  fitness.gnuplot  process_log.rb  statistics.gnuplot  xml2dot.xsl
